# Geometry_artifacts

./: CMakeLists.txt  README.md  correct.gdml  strange.gdml  vis.mac
compact/: strange_v0.xml  tricky_pyr.xml
src/: strange_v0.cpp  tricky_pyr.cpp
